--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ notify = "6.1"
 midir = "0.10"
 anyhow = "1"
 crossbeam-channel = "0.5"
+rosc = "0.10"
 
 # Optional NDI output (requires NDI SDK installed; build with --features ndi)
 # Using grafton-ndi 0.9.x API (PixelFormat/ScanType/VideoFrame builder, etc.)
